<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">PUDDING</string>
    <string name="facebook_app_id">322597665148339</string>
    <string name="fb_login_protocol_scheme">fb322597665148339</string>
    <string name="kakao_app_key">fd69752b10fd211478b3641cb2f62ead</string>
    <string name="kakao_scheme">kakaofd69752b10fd211478b3641cb2f62ead</string>
    <string name="adbrix_remastered_app_key">1w7AjVQK6kiM3MzVVtkmVg</string>
    <string name="adbrix_remastered_secret_key">IQGwAj8W2kmjT2qLjaQc0w</string>
    <string name="kakaolink_host">puddinglink</string>
    <string name="msg_exit_program_double_back">\'뒤로가기\' 버튼을 한번 더 누르면 애플리케이션이 종료됩니다.</string>
    <string name="msg_term_of_use">이용약관</string>
    <string name="msg_privacy_use">개인정보 수집 및 이용안내</string>
    <string name="msg_privacy_consignment">개인정보 수집 및 위탁안내</string>
    <string name="msg_login_hint_account">아이디 입력</string>
    <string name="msg_login_hint_password">비밀번호 입력</string>
    <string name="msg_login">로그인</string>
    <string name="msg_login_auto">자동로그인</string>
    <string name="msg_login_save">아이디저장</string>
    <string name="msg_login_find_account">아이디 찾기</string>
    <string name="msg_login_find_password">비밀번호 찾기</string>
    <string name="msg_login_sign_up_header">푸딩이 처음이신가요?</string>
    <string name="msg_login_sign_up">회원가입</string>
    <string name="all_more">전체보기</string>
    <string name="msg_registered_date">가입일자</string>
    <string name="msg_signup_title">회원가입</string>
    <string name="msg_signup_step1">본인확인</string>
    <string name="msg_signup_step2">회원정보입력</string>
    <string name="msg_signup_step3">가입완료</string>
    <string name="msg_signup_successfully">회원가입이 완료되었습니다.</string>
    <string name="msg_signup_introduce">푸딩의 다양한 서비스를\n체험해보세요!!</string>
    <string name="msg_signup_identification_title">본인확인</string>
    <string name="msg_signup_identification_cellphone">휴대폰 인증</string>
    <string name="msg_signup_identification_annotation">본인인증 시, 제공되는 정보는 해당 인증기관에서 직접 수집하며, 인증 이외의 용도로 이용 또는 저장하지 않습니다.</string>
    <string name="msg_information_title">회원정보 입력</string>
    <string name="msg_information_subtitle">회원가입을 위한 정보를 입력해주세요</string>
    <string name="msg_information_account">아이디</string>
    <string name="msg_information_account_hint">아이디를 입력해주세요</string>
    <string name="msg_information_password">비밀번호 설정</string>
    <string name="msg_information_password_head">영문, 숫자, 특수문자 포함 8~12자로 입력해주세요</string>
    <string name="msg_information_account_head">영문 및 숫자를 이용하여 5~12자로 입력해주세요</string>
    <string name="msg_information_password_hint">새 비밀번호를 입력해주세요</string>
    <string name="msg_information_password_confirm">비밀번호 확인</string>
    <string name="msg_information_password_confirm_hint">입력하신 비밀번호를 다시 입력해주세요</string>
    <string name="msg_information_cellphone">휴대폰 번호</string>
    <string name="msg_information_cellphone_head"> - 를 제외한 휴대폰번호를 입력해주세요</string>
    <string name="msg_information_cellphone_hint">휴대폰 번호를 입력해주세요</string>
    <string name="msg_information_email">이메일</string>
    <string name="msg_information_email_hint">이메일을 입력해주세요</string>
    <string name="msg_information_submit">회원 가입하기</string>
    <string name="msg_agreement_title">이용약관 동의</string>
    <string name="msg_agreement_all">푸딩 약관 모두 동의</string>
    <string name="msg_agreement_terms">푸딩 이용약관</string>
    <string name="msg_agreement_privacy_use">개인정보 수집 및 이용 동의</string>
    <string name="msg_agreement_privacy_consignment">개인정보 취급 및 위탁동의</string>
    <string name="msg_agreement_mandatory">(필수)</string>
    <string name="msg_agreement_optional">(선택)</string>
    <string name="msg_agreement_detail">전체보기</string>
    <string name="msg_signup_error_bad_type_account">아이디는 5~12 글자의 영문, 숫자 조합으로 구성되어야 합니다.</string>
    <string name="msg_signup_error_bad_type_password">비밀번호 입력형식이 올바르지 않습니다.</string>
    <string name="msg_signup_error_mismatch_password">새로운 비밀번호와 재입력한 새로운 비밀번호가 일치하지 않습니다.</string>
    <string name="msg_signup_error_bad_type_cellphone">휴대폰번호는 숫자로만 구성되어야 합니다.</string>
    <string name="msg_signup_error_bad_type_auth">문자인증 번호를확인해주세요.</string>
    <string name="msg_signup_error_bad_type_cellphone1">휴대폰번호를 확인해주세요</string>
    <string name="msg_signup_error_bad_type_email">이메일 형식이 올바르지 않습니다.</string>
    <string name="msg_signup_error_not_agree_mandatory">필수 이용약관을 동의하셔야 회원가입이 가능합니다.</string>
    <string name="msg_signup_hp_cert_success">인증이 완료되었습니다.</string>
    <string name="msg_signup_hp_cert_canceled">인증이 취소되었습니다.</string>
    <string name="msg_signup_already_registered_title">회원님의 정보로 아래와 같은\n가입 내역이 있습니다.</string>
    <string name="msg_withdrawal">회원탈퇴</string>
    <string name="msg_withdrawal_agree">위 내용을 모두 확인하였습니다.</string>
    <string name="msg_withdrawal_success_title">회원탈퇴가 완료되었습니다.</string>
    <string name="msg_withdrawal_success_content">그 동안 푸딩을 이용해주셔서 감사합니다.\n더욱 노력하는 푸딩이 되겠습니다.</string>
    <string name="home_category_hot">HOT</string>
    <string name="home_category_follow">FOLLOW</string>
    <string name="home_category_live">LIVE</string>
    <string name="home_category_vod">NEW</string>
    <string name="category_all">전체</string>
    <string name="category_fashion">패션</string>
    <string name="category_beauty">뷰티</string>
    <string name="category_children">유아동</string>
    <string name="category_food">식품</string>
    <string name="category_life_necessities">생필품</string>
    <string name="category_home_deco">홈데코</string>
    <string name="category_health">건강/렌탈</string>
    <string name="category_hobby">문구/취미</string>
    <string name="category_sport">스포츠</string>
    <string name="category_car">자동차/공구</string>
    <string name="category_electronic">가전</string>
    <string name="category_digital">디지털</string>
    <string name="category_game">게임</string>
    <string name="category_travel_book">여행/도서</string>
    <string name="msg_id_rule">아이디는 영문, 숫자를 포함한 5자 이상 12자 이하로 구성되어야 합니다</string>
    <string name="msg_password_rule">비밀번호는 영문, 숫자, 특수문자를 포함한 8자이상 12자 이하로 구성되어야 합니다</string>
    <string name="msg_error_id_not_input">아이디를 입력하여 주세요</string>
    <string name="msg_error_pw_not_input">비밀번호를 입력하여 주세요</string>
    <string name="msg_my">마이</string>
    <string name="msg_my_broadcasting">방송하기</string>
    <string name="msg_tab_my_channel">My채널</string>
    <string name="msg_tab_my_shopping">My쇼핑</string>
    <string name="msg_my_video">내 영상</string>
    <string name="msg_my_menu_scrab">스크랩한 영상</string>
    <string name="msg_my_menu_recently_video">최근 본 영상</string>
    <string name="msg_my_menu_cookie">푸딩</string>
    <string name="msg_my_menu_share">공유 영상 내역</string>
    <string name="msg_my_menu_statistics_daily">일간현황</string>
    <string name="msg_my_menu_statistics_board_info">영상분석</string>
    <string name="msg_my_menu_statistics_sale_info">상품분석</string>
    <string name="msg_my_menu_statistics_rank_info">영상순위</string>
    <string name="msg_my_settings">설정</string>
    <string name="msg_my_notification">공지사항</string>
    <string name="msg_my_delivery_header">주문 배송 조회</string>
    <string name="msg_my_delivery_step2">결제완료</string>
    <string name="msg_my_delivery_step3">상품준비중</string>
    <string name="msg_my_delivery_step4">배송중</string>
    <string name="msg_my_delivery_step5">배송완료</string>
    <string name="msg_my_shopping_menu_purchase_history">구매내역</string>
    <string name="msg_my_shopping_menu_point">포인트</string>
    <string name="msg_my_shopping_menu_product_history">최근 본 상품</string>
    <string name="msg_my_shopping_menu_product_qna">상품문의 / 답변</string>
    <string name="msg_my_shopping_menu_cre">취소·교환·반품</string>
    <string name="msg_my_shopping_menu_customer_center">고객센터</string>
    <string name="msg_my_shopping_cart">장바구니</string>
    <string name="msg_my_shopping_cart_product_all">전체선택</string>
    <string name="msg_my_shopping_cart_empty">장바구니에 담은 상품이 없습니다.\n푸딩의 다양한 상품을 구경해보세요</string>
    <string name="msg_my_shopping_cart_purchase">전체상품 구매</string>
    <string name="msg_my_shopping_cart_guide">·장바구니에 담긴 상품은 최대 30일까지 보관되며, 판매가 종료되거나 매진될 경우 자동으로 삭제됩니다.</string>
    <string name="msg_my_shopping_cart_guide1">·결제계정금액은 쿠폰할인 및 포인트 적용 전의 가격입니다.</string>
    <string name="msg_my_shopping_cart_total_product_price">상품금액</string>
    <string name="msg_my_shopping_cart_total_payment_price">총 주문금액</string>
    <string name="msg_my_shopping_cart_product_price">상품금액</string>
    <string name="msg_my_shopping_cart_delivery_price">배송비</string>
    <string name="msg_my_shopping_cart_order_price">주문금액</string>
    <string name="msg_my_shopping_cart_modify">수정</string>
    <string name="msg_my_shopping_cart_check_count">%d개 선택</string>
    <string name="msg_my_shopping_purchase_history_guide">최대 6개월 이내 구매내역만 확인하실 수 있습니다.</string>
    <string name="msg_my_shopping_purchase_history_empty">구매내역이 없습니다.</string>
    <string name="msg_my_shopping_order_number">주문번호</string>
    <string name="msg_my_shopping_order_detail">상세정보</string>
    <string name="msg_my_shopping_order_all_cancel">전체 주문취소</string>
    <string name="msg_my_shopping_order_detail_delivery_info">배송지 정보</string>
    <string name="msg_my_shopping_order_detail_receiver">수령인</string>
    <string name="msg_my_shopping_order_detail_contact">연락처</string>
    <string name="msg_my_shopping_order_detail_address">배송지</string>
    <string name="msg_my_shopping_order_detail_deposit_info">입금 정보</string>
    <string name="msg_my_shopping_order_detail_deposit_price">입금할 금액</string>
    <string name="msg_my_shopping_order_detail_deposit_bank">입금은행</string>
    <string name="msg_my_shopping_order_detail_deposit_account">입금계좌</string>
    <string name="msg_my_shopping_order_detail_payment_info">결제 정보</string>
    <string name="msg_my_shopping_order_detail_product_price">상품금액</string>
    <string name="msg_my_shopping_point_guide">포인트 안내</string>
    <string name="msg_my_shopping_accumulated">포인트 적립</string>
    <string name="msg_my_shopping_point_use">포인트 사용</string>
    <string name="msg_my_shopping_point_destroy">포인트 소멸</string>
    <string name="msg_my_shopping_point_1">포인트는 구매 및 이벤트 등으로 지급되는 포인트입니다.</string>
    <string name="msg_my_shopping_point_2">상품을 구매할 경우, 결제금액의 1%가 포인트로 적립됩니다.(배송비 제외)\n\n상품 구매 후, 구매확정을 해야만 포인트가 즉시 적립됩니다\n\n상품 구매 후, 구매확정을 하지 않을 경우에는 배송 완료일로부터 15일 이후에 포인트가 적립됩니다</string>
    <string name="msg_my_shopping_point_3">적립된 포인트는 최소 1,000원부터 10원 단위로 사용이 가능합니다</string>
    <string name="msg_my_shopping_point_4">포인트 적립일로부터 1년 이내에 사용하지 않을 경우 포인트는 자동소멸됩니다\n\n이벤트 참여로 적립된 포인트는 이벤트에 따라 소멸기간이 상이할 수 있습니다</string>
    <string name="msg_exchange_request_complete">교환요청이 접수되었습니다.</string>
    <string name="msg_exchange_request_complete_guide">판매자가 교환 가능 상태 여부를 확인하여\n처리하므로 완료까지 다소 시간이\n걸릴 수 있는 점 양해 부탁드립니다.</string>
    <string name="msg_exchange_request_complete_guide1">배송 및 교환 진행 상태는\n[마이] 탭에서 확인해주세요.</string>
    <string name="msg_cre_confirm">확인</string>
    <string name="msg_my_setting_passwd_change">비밀번호 변경</string>
    <string name="msg_my_setting_passwd_input_guide">회원님의 개인정보를 안전하게 보호하기 위해 비밀번호를 다시 한번 확인해주세요.</string>
    <string name="msg_my_setting_passwd_input_hint">현재 비밀번호를 입력해주세요</string>
    <string name="msg_my_setting_passwd_setting">비밀번호 설정</string>
    <string name="msg_my_setting_passwd_setting_guide">영문, 숫자, 특수문자 포함 8~12자로 입력해주세요.</string>
    <string name="msg_my_setting_passwd_setting_hint">새 비밀번호를 입력해주세요</string>
    <string name="msg_my_setting_passwd_confirm">비밀번호 확인</string>
    <string name="msg_my_setting_passwd_not_match">비밀번호가 일치하지 않습니다.</string>
    <string name="msg_my_setting_passwd_not_match_new_passwd">새로운 비밀번호와 재입력한 새로운 비밀번호가 일치하지 않습니다.</string>
    <string name="msg_nick_name_change">닉네임 변경</string>
    <string name="msg_nick_name_input">닉네임을 입력해주세요</string>
    <string name="msg_nick_name_guide1">문자, 숫자 포함 10자 이내로 입력해주세요.</string>
    <string name="msg_nick_name_guide2">변경 시, 24시간 이후에 재변경이 가능합니다.</string>
    <string name="msg_nick_name_check">중복확인</string>
    <string name="msg_nick_name_cancel">취소</string>
    <string name="msg_nick_name_confirm">확인</string>
</resources>