<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/bg_point_guide_dialog">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_popup_title_round_5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="20dip"
            android:fontFamily="@font/notosanskr_medium"
            android:textColor="#FF222222"
            android:text="@string/msg_my_shopping_point_guide"/>

        <RelativeLayout
            android:id="@+id/buttonClose"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_width="46dp"
            android:layout_height="46dp" >

            <ImageView
                android:layout_width="16dp"
                android:layout_height="17dp"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_popup_close"/>

        </RelativeLayout>

        <!--<android.support.v7.widget.AppCompatImageButton-->
            <!--android:id="@+id/buttonClose"-->
            <!--android:layout_width="16dp"-->
            <!--android:layout_height="17dp"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:background="@drawable/ic_popup_close"/>-->
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#FFCCCCCC" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="20dp"
        android:orientation="vertical">

        <!-- 포인트 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#FF192028"
            android:textSize="14dip"
            android:fontFamily="@font/notosanskr_bold"
            android:text="@string/msg_my_shopping_menu_point"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="12dip"
            android:textColor="#FF8192A5"
            android:fontFamily="@font/notosanskr_medium"
            android:text="@string/msg_my_shopping_point_1"/>


        <!-- 포인트 적립-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="#FF192028"
            android:textSize="14dip"
            android:fontFamily="@font/notosanskr_bold"
            android:text="@string/msg_my_shopping_accumulated"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="12dip"
            android:textColor="#FF8192A5"
            android:fontFamily="@font/notosanskr_medium"
            android:text="@string/msg_my_shopping_point_2"/>

        <!-- 포인트 사용-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="#FF192028"
            android:textSize="14dip"
            android:fontFamily="@font/notosanskr_bold"
            android:text="@string/msg_my_shopping_point_use"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="12dip"
            android:textColor="#FF8192A5"
            android:fontFamily="@font/notosanskr_medium"
            android:text="@string/msg_my_shopping_point_3"/>

        <!-- 포인트 소멸-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textColor="#FF192028"
            android:textSize="14dip"
            android:fontFamily="@font/notosanskr_bold"
            android:text="@string/msg_my_shopping_point_destroy"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:textSize="12dip"
            android:textColor="#FF8192A5"
            android:fontFamily="@font/notosanskr_medium"
            android:text="@string/msg_my_shopping_point_4"/>
    </LinearLayout>
</LinearLayout>