<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutRoot"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/popup_bg"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <!-- 타이틀 바 -->
    <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="51dp"
        android:background="#f3f8fd">

        <!-- Depth Title -->
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/notosanskr_bold"
            android:text="@string/msg_nick_name_change"
            android:textColor="#192028"
            android:textSize="18dip" />

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e3e3e3" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextNickName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/buttonCheck"
            android:fontFamily="@font/notosanskr_medium"
            android:hint="@string/msg_nick_name_input"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:textColorHint="#bcc6d2"
            android:textColor="#222222"
            android:textSize="16dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/buttonCheck"
            android:layout_width="78dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/msg_nick_name_check"
            android:textSize="14sp"
            android:textColor="@color/main_color"
            android:fontFamily="@font/notosanskr_medium"
            android:background="@drawable/bg_nick_name_check"/>
    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewNickNameStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/notosanskr_medium"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:textSize="12dp"
        android:textColor="#ff6c6c"
        android:letterSpacing="-0.01"
        android:text="이미 사용중인 닉네임입니다."
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/notosanskr_medium"
        android:textSize="12dp"
        android:textColor="#222222"
        android:letterSpacing="-0.01"
        android:text="@string/msg_nick_name_guide1"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="4dp"
        android:textSize="12dp"
        android:fontFamily="@font/notosanskr_medium"
        android:textColor="#222222"
        android:letterSpacing="-0.01"
        android:text="@string/msg_nick_name_guide2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/msg_nick_name_cancel"
            android:textSize="18dp"
            android:textColor="#bcc6d2"
            android:fontFamily="@font/notosanskr_medium"
            android:background="@drawable/bg_cancel"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonConfirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:text="@string/msg_nick_name_confirm"
            android:textSize="18dp"
            android:textColor="#ffffff"
            android:fontFamily="@font/notosanskr_medium"
            android:background="@drawable/bg_confirm"/>
    </LinearLayout>
</LinearLayout>