<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutRoot"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFFFFFFF"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="272dp"
        android:layout_height="187dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewCRETitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            tools:text="@string/msg_exchange_request_complete"
            android:fontFamily="@font/notosanskr_medium"
            android:textColor="#192028"
            android:textSize="18dip"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewCREGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            tools:text="@string/msg_exchange_request_complete_guide"
            android:fontFamily="@font/notosanskr_medium"
            android:textColor="#f80d3b"
            android:textSize="14dip"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:text="@string/msg_exchange_request_complete_guide1"
            android:fontFamily="@font/notosanskr_medium"
            android:textColor="#192028"
            android:textSize="14dip" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e1e1e1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonConfirm"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="@color/main_color"
        android:fontFamily="@font/notosanskr_medium"
        android:text="@string/msg_cre_confirm"
        android:textColor="#FFFFFFFF"
        android:textSize="16dip" />
</LinearLayout>